--- a/frontend/style/login.css
+++ b/frontend/style/login.css
@@ -1,140 +1,150 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap");
 
-*{
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "Nunito", sans-serif;
-}
-
-/* body{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #F8F1F1;
-} */
-
-#login-section{
-    width: 80vw;
-    height: 90vh;
-    background-color: whitesmoke;
-    backdrop-filter: blur(19px) saturate(180%);
-    border-radius: 12px;
-    border: 1px solid rgba(255,255,255,0.125);
+    font-family: "Parkinsans", sans-serif;
+    background-color: #f3f4f6;
     display: flex;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.image-container {
-    flex: 1;
-    background-image: url('/Green-Shadow-front-end/assets/images/logo-color.svg'); /* Replace with your image URL */
-    background-size: cover;
-    background-position: center;
-    border-radius: 12px;
-}
-
-.form-container{
-    flex: 1;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    justify-content: center;
+    height: 100vh;
 }
 
-.form-box{
-    width: 446px;
-    height: 680px;
-    position: relative;
-    margin: 6% auto;
-    background: #F8F1F1;
-    padding: 5px;
-    border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.login-container {
+    width: 1200px;
+    height: 600px;
+    display: flex;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
 }
 
-.button-box{
-    width: 230px;
-    margin: 35px auto;
+.form-section {
+    flex: 1;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 6em;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.input-group {
     position: relative;
-    box-shadow: 0 0 20px 9px rgba(240, 255, 255, 0.63);
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-bottom: 20px;
 }
 
-.toggle-btn{
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-}
-
-#btn{
-    top: 0;
-    left: 0;
+.input-group i {
     position: absolute;
-    width: 110px;
-    height: 100%;
-    background: #0687a1;
-    border-radius: 30px;
-    transition: .5s;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: #777;
 }
 
-.input-group{
-    top: 180px;
-    position: absolute;
-    width: 335px;
-    transition: .5s;
+.input-group input {
+    width: 100%;
+    padding: 10px 40px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.input-field{
-    /* width: 100%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
+.input-group select{
+    width: 100%;
+    padding: 10px 40px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.input-group select:focus{
     outline: none;
-    background: transparent; */
-    padding: 20px;
-    width: 350px;
+    border-color: #28bba2;
+}
+
+.input-group input:focus {
+    outline: none;
+    border-color: #28bba2;
+}
+
+#show-register{
+    font-weight: 500;
+    color: lightblue;
+}
+
+#show-login{
+    font-weight: 500;
+    color: #28bba2c7;
+}
+
+#btn-login {
+    width: 100%;
+    padding: 10px;
+    background-color: lightblue;
+    color: #fff;
+    font-size: 16px;
     border: none;
-    outline: none;
-    background-color: rgba(255, 255, 255, 0.6);
-    color: black;
-    border-radius: 10px;
-    margin: 20px 0;
-    border: 1px solid #0687a1;
-}
-
-.submit-btn{
-    width: 90%;
-    padding: 15px 35px;
+    border-radius: 5px;
     cursor: pointer;
-    display: block;
-    margin: auto;
-    background: #0687a1;
-    border: 0;
-    outline: none;
-    border-radius: 30px;
+    transition: background-color 0.3s;
+}
+
+#btn-register {
+    width: 100%;
+    padding: 10px;
+    background-color: #28bba2;
+    color: #fff;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#btn-login:hover {
+    background-color: #28bba2c7;
+}
+
+#btn-register:hover {
+    background-color: #28bba2c7;
+}
+
+.link {
+    text-align: center;
     margin-top: 20px;
-    color: aliceblue;
-    transition: .3s;
 }
 
-.submit-btn:hover{
-    background-color: #033e49;
+.link a {
+    color: #007bff;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-#login{
-    left: 50px;
+.link a:hover {
+    text-decoration: underline;
 }
 
-#register{
-    left: 450px;
+.image-section {
+    flex: 1;
+    background-color: #f8f9fa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-section img {
+    max-width: 100%;
+    height: auto;
+}
+
+.hidden {
+    display: none;
 }
